nova_tests/plan138_5/neg/neg_ro_prefix_ptr_return.nv
// Plan 138.5 NEG — prefix `ro *` in RETURN position is forbidden too.
//
// Return-position avoids parse_param's pre-name binding-`mut` consumption,
// so this exercises the pure type-position arm. Migrate `-> ro * T` →
// `-> *ro T`.
//
// EXPECT_COMPILE_ERROR E_POINTER_PREFIX_MODIFIER

module neg.neg_ro_prefix_ptr_return

extern "nova" fn p() -> ro * int
